# irl

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  LICENSE.txt  README.md  SECURITY.md  TODO.md  _onboarding.swift  output_custom.json  package-lock.json  package.json  prompt_schema.db  setup-dev.sh  todo.md  vercel.json
backend/: .env.example  .pre-commit-config.yaml  convertm4a2wav.py  index.py  middleware.py  migrate_configs.py  mp42wav.py  pyproject.toml  requirements.txt  run_backend.sh  test_socket_ping.sh  waitlist_data.db
backend/_external/HumeSpeechProsody/: check_job_status.py
backend/_external/route/: humeclient.py
backend/_external/services/: diarizationService.py  embeddingGenerateService.py  geminiService.py  (+3 more)
backend/data/: app_user_identification.db  website_waitlist_data.db
backend/database/: __init__.py  core.py  database_events.py  db_modules.py  db_modules_v2.py  db_state.py  device_registration.py  device_registration_v2.py  init_db.py  migrate_configs.py  user.py  waitlist.py  waitlist_db.py
backend/demo_rust_app/: Cargo.toml
backend/examples/: README.md  embedding_oai_3_comparison.py.py  openai_post.py  pyannote_diarization.py  textEmbeddingRoutev1.py
backend/routers/: hume.py  humeclient.py
backend/services/: diarizationService.py  embeddingService.py  geminiService.py  geminiServicev2.py  gemini_socket.py  openaiGenerateTextService.py  scrapeChatGPTSharedChat.py
backend/utils/: app_icon_fix.py  audioUtils.py  audio_utils.py  db_schema.py  db_state.py  extract_and_resample_audio.py  gemini_config.py  validate_gemini_configs.py
(+1020 files in other folders)
